# Auto-FG

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  RELEASE_NOTES.md  input.txt  setup.bat  setup.sh
.github/workflows/: release.yml
assets/: Auto-FG.desktop
src/: extractor.rs  lib.rs  main.rs
